# fastapi-patients

./: .env  .env_docker  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.py
app/: main.py
app/api/v1/: __init__.py  subapp.py
app/api/v1/endpoints/: __init__.py  doctor_api.py  patient_api.py
app/core/: config.py  container.py  database.py  exceptions.py
app/models/: __init__.py  bmr_model.py  doctor_model.py  mbr_model.py  patient2doctor.py  patient_model.py
app/models/base/: __init__.py  base.py
app/repos/: __init__.py  bmr_repo.py  doctor_repo.py  mbr_repo.py  patient2doctor_repo.py  patient_repo.py
app/repos/base/: base_repo.py
app/schemes/: bmr_schema.py  doctor_schema.py  filters.py  mbr_schema.py  patient_schema.py
app/schemes/base/: base_schema.py
app/services/: __init__.py  doctor_service.py  patient_service.py
app/services/base/: base_service.py
app/utils/: __init__.py  bmr_utils.py
migrations/: env.py
migrations/versions/: 1997abce4139_add_unqiue_patient_id_doctor_id.py  1dc4016a82a1_bmr.py  245e54ba1e18_rename_table.py  2f601b774929_initial.py  37bf75ab6471_add_cascade.py  6216145cde13_add_default_to_created_at_updated_at.py  643043f2547c_initial.py  655c94028759_add_reference.py  73b5fbfaa592_add_reference.py  978cc4eac2a1_fix_many_to_many_order.py  e267dd5dc351_delete_reference.py  f6f0bc853e47_initial.py
